--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -70,9 +70,10 @@ nav:
       - ADOT Collector:
         - Operating At Scale: guides/operational/adot-at-scale/operating-adot-collector.md
         - Manually Instrumenting Spring Integration Applications: guides/operational/adot-at-scale/adot-java-spring/adot-java-spring.md
-      - Monitoring for business outcomes: guides/operational/business/monitoring-for-business-outcomes.md
+      - Monitoring for Business Outcomes: guides/operational/business/monitoring-for-business-outcomes.md
       - Percentiles: guides/operational/business/sla-percentile.md
       - Key Performance Indicators: guides/operational/business/key-performance-indicators.md
+      - Creating Custom Metrics with Rust: guides/rust-custom-metrics/README.md
       - Alerting:
         - Prometheus Alert Manager: guides/operational/alerting/amp-alertmgr.md
       - GitOps:
