adding mod tidy Docker

--- a/sandbox/ho11y/Dockerfile
+++ b/sandbox/ho11y/Dockerfile
@@ -1,9 +1,10 @@
-FROM golang:1.15-alpine AS build
+FROM golang:1.16-alpine AS build
 RUN go env -w GOPROXY=direct
 RUN apk add --no-cache git
 RUN apk update && apk add ca-certificates
 WORKDIR /usr/src/app
 COPY . .
+RUN go mod tidy
 RUN CGO_ENABLED=0 go build -a -ldflags '-extldflags "-static"'
 
 FROM amazonlinux:2
