--- a/sandbox/CWMetricStreamExporter/cdk/package.json
+++ b/sandbox/CWMetricStreamExporter/cdk/package.json
@@ -31,7 +31,7 @@
     "js-yaml": "^4.1.0",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "typescript": "^4.4.3"
   },
   "dependencies": {
     "@aws-cdk/aws-kinesisfirehose-alpha": "2.99.0-alpha.0",
