--- a/solutions/oss/eks-infra/v1.0.0/infrastructure/amg_grafana-dashboards.yaml
+++ b/solutions/oss/eks-infra/v1.0.0/infrastructure/amg_grafana-dashboards.yaml
@@ -4,7 +4,7 @@ metadata:
   name: cluster-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
@@ -16,7 +16,7 @@ metadata:
   name: kubelet-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
@@ -28,7 +28,7 @@ metadata:
   name: namespace-workloads-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
@@ -40,7 +40,7 @@ metadata:
   name: node-exporter-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
@@ -52,7 +52,7 @@ metadata:
   name: nodes-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
@@ -64,7 +64,7 @@ metadata:
   name: workloads-grafanadashboard
   namespace: grafana-operator
 spec:
-  folder: "Observability Accelerator Dashboards"
+  folder: "EKS Infrastructure Dashboards"
   instanceSelector:
     matchLabels:
       dashboards: "external-grafana"
