Naming changes, add tagging

--- a/solutions/oss/eks-infra/v2.0.0/iac/Makefile
+++ b/solutions/oss/eks-infra/v2.0.0/iac/Makefile
@@ -13,35 +13,37 @@ formatted_pattern_names := $(patsubst %.ts,%,$(pattern_files))
 # Dependecies
 HOMEBREW_LIBS :=  nvm typescript argocd
 
+BIN_NAME := aws-o11y-solution-eks-infra
+
 
 deps: bootstrap
 	npm install
 
-lint: 
+lint:
 	$(ESLINT) . --ext .js,.jsx,.ts,.tsx
 
-lint-fix: 
+lint-fix:
 	$(ESLINT) . --ext .js,.jsx,.ts,.tsx --fix
 
 build:
 	rm -rf dist && $(TSC) --skipLibCheck
 
 compile:
-	$(TSC) --build --incremental 
+	$(TSC) --build --incremental
 
-list: 
-	@$ echo "To work with patterns use: \n\t$$ make pattern <pattern-name> <list | deploy | synth | destroy>" 
-	@$ echo "Example:\n\t$$ make pattern single-new-eks-opensource-observability deploy \n\nPatterns: \n" 
+list:
+	@$ echo "To work with patterns use: \n\t$$ make pattern <pattern-name> <list | deploy | synth | destroy>"
+	@$ echo "Example:\n\t$$ make pattern single-new-eks-opensource-observability deploy \n\nPatterns: \n"
 	@$ $(foreach pattern, $(formatted_pattern_names),  echo "\t$(pattern)";)
 
 mkdocs:
-	mkdocs serve 
+	mkdocs serve
 
 # To supress the error after make command is run
 # such as make: *** No rule to make target 'single-new-eks-awsnative-observability'.  Stop.
 pattern:
 	@echo $(pattern_name) performing $(pattern_command)
-	$(CDK) --app "npx ts-node bin/$(pattern_name).ts" $(if $(pattern_command),$(pattern_command), list)
+	$(CDK) --app "npx ts-node bin/$(BIN_NAME).ts" $(if $(pattern_command),$(pattern_command), list)
 	@:
 %:
 	@:
@@ -50,7 +52,7 @@ test-all:
 	@for pattern in $(formatted_pattern_names) ; do \
 		echo "Building pattern $$pattern"; \
 		$(CDK) --app "npx ts-node bin/$$pattern.ts" list || exit 1 ;\
-    done 
+    done
 
 bootstrap:
 	@for LIB in $(HOMEBREW_LIBS) ; do \
@@ -61,8 +63,8 @@ bootstrap-cdk:
 	aws cloudformation describe-stacks \
 		--stack-name CDKToolkit \
 		--region ${AWS_REGION} || \
-		CDK_NEW_BOOTSTRAP=1 $(CDK) bootstrap 
-			
+		CDK_NEW_BOOTSTRAP=1 $(CDK) bootstrap
+
 check-lib:
 ifeq ($(shell brew ls --versions $(LIB)),)
 	@echo Installing $(LIB) via Hombrew
