--- a/solutions/oss/eks-infra/v3.0.0/infrastructure/kustomization.yaml
+++ b/solutions/oss/eks-infra/v3.0.0/infrastructure/kustomization.yaml
@@ -4,4 +4,5 @@ resources:
   - amg_grafana-identity.yaml
   - amg_grafana-amp-datasource.yaml
   - amg_grafana-dashboards.yaml
+  - amg_grafana-cw-datasource.yaml
 
