Update Kustomization naming

--- a/solutions/oss/eks-infra/v3.0.0/infrastructure/kustomization.yaml
+++ b/solutions/oss/eks-infra/v3.0.0/infrastructure/kustomization.yaml
@@ -3,6 +3,6 @@ kind: Kustomization
 resources:
   - amg_grafana-identity.yaml
   - amg_grafana-amp-datasource.yaml
-  - amg_grafana-dashboards.yaml
+  - amg_grafana-infra-dashboards.yaml
   - amg_grafana-cw-datasource.yaml
 
