--- a/solutions/oss/eks-infra/v3.0.0/apiserver/kustomization.yaml
+++ b/solutions/oss/eks-infra/v3.0.0/apiserver/kustomization.yaml
@@ -1,5 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - amg_grafana-dashboards.yaml
-  
+  - amg_grafana-apiserver-dashboards.yaml
