--- a/solutions/oss/eks-infra/v3.0.0/infrastructure/amg_grafana-infra-dashboards.yaml
+++ b/solutions/oss/eks-infra/v3.0.0/infrastructure/amg_grafana-infra-dashboards.yaml
@@ -73,7 +73,7 @@ spec:
 apiVersion: grafana.integreatly.org/v1beta1
 kind: GrafanaDashboard
 metadata:
-  name: logs-grafanadashboard
+  name: fleet-monitoring-grafanadashboard
   namespace: grafana-operator
 spec:
   folder: "EKS Infrastructure Monitoring"
