Add URL to CW data source

--- a/solutions/oss/eks-infra/v3.0.0/infrastructure/amg_grafana-cw-datasource.yaml
+++ b/solutions/oss/eks-infra/v3.0.0/infrastructure/amg_grafana-cw-datasource.yaml
@@ -12,6 +12,7 @@ spec:
     type: cloudwatch
     access: proxy
     isDefault: false
+    url: ""
     jsonData:
       'tlsSkipVerify': false
       'sigV4Auth': true
