--- a/.github/workflows/docs-ci.yaml
+++ b/.github/workflows/docs-ci.yaml
@@ -20,6 +20,7 @@ jobs:
       - name: Build
         run: |
           cd docusaurus
+          yarn install
           yarn build
       - uses: peaceiris/actions-gh-pages@v3
         with:
