--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,10 @@ yarn.lock
 .docusaurus
 
 # Dependencies
-/node_modules
+node_modules
 
 # Production
-/build
+build
 
 # Generated files
 .docusaurus
