--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/preset-classic": "3.4.0",
     "@easyops-cn/docusaurus-search-local": "^0.44.0",
     "@mdx-js/react": "^3.0.0",
+    "aws-rum-web": "^1.19.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
