--- a/.github/workflows/markdown-link-check.yaml
+++ b/.github/workflows/markdown-link-check.yaml
@@ -26,4 +26,4 @@ jobs:
       - name: markdown-link-check version
         run: npm list -g markdown-link-check
       - name: Run markdown-link-check on MD files
-        run: find docs -name "*.md" | xargs -n 1 markdown-link-check -q -c .github/workflows/linkcheck.json
+        run: find docusaurus -name "*.md" | xargs -n 1 markdown-link-check -q -c .github/workflows/linkcheck.json
