--- a/sandbox/monitor-aurora-with-grafana/out.yml
+++ b/sandbox/monitor-aurora-with-grafana/out.yml
@@ -1,12 +1,12 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: An AWS Lambda application that calls the Lambda API for Performance Insights
+Description: An AWS Lambda application that calls the API for Performance Insights
   metrics in Amazon Aurora.
 Parameters:
   TargetMetricNamespace:
     Type: String
     Default: /AuroraMonitoringGrafana/PerformanceInsightMetrics
-    Description: Target Amazon CloudWatch namespace where you want to public custom
+    Description: Target Amazon CloudWatch namespace where you want to publish custom
       metrics
 Resources:
   function:
@@ -14,8 +14,8 @@ Resources:
     Properties:
       Handler: lambda_function.lambda_handler
       Runtime: python3.8
-      CodeUri: s3://aurora-monitoring-grafana-pi-494d34597b3a4e8c/280c1b143b842055b23932598b88bee4
-      Description: Publish Custom Cloudwatch Metrics for Performance Insights
+      CodeUri: s3://aurora-monitoring-grafana-pi-7a13ecf009e716e0/8039a1b901a8e822fcf5da14b3840485
+      Description: Publish Custom Performance Insights metrics to Cloudwatch
       Timeout: 900
       Environment:
         Variables:
@@ -31,7 +31,7 @@ Resources:
         Schedule:
           Type: ScheduleV2
           Properties:
-            ScheduleExpression: rate(15 minutes)
-            Name: TestScheduleV2Function
-            Description: Test schedule event
+            ScheduleExpression: rate(10 minutes)
+            Name: RunPIExtractorLambda
+            Description: Trigger Lambda execution on a schedule
             State: ENABLED
